--- a/lab_python/Python_tutorial.ipynb
+++ b/lab_python/Python_tutorial.ipynb
@@ -53,7 +53,7 @@
     "id": "U1PvreR9L9eW"
    },
    "source": [
-    "Python programming itself deserves at least one course, the more you learn it, the more you get attracted by the language. Getting started with Python and make use it of is not very difficult but how to effectively use it requires a deeper understanding of the language. After you grabbed the basics and started to use it for your daily work, I highly recommend a book that will greatly accelerate your understanding of the language and get your programming skill to the next level: \n",
+    "Python programming itself deserves at least one course, the more you learn it, the more you get attracted by the language. Getting started with Python and make use of it is not very difficult but how to effectively use it requires a deeper understanding of the language. After you grabbed the basics and started to use it for your daily work, I highly recommend a book that will greatly accelerate your understanding of the language and get your programming skill to the next level: \n",
     "\n",
     "Fluent Python \n",
     "by Luciano Ramalho. \n",
