--- a/lab_python/Python_tutorial.ipynb
+++ b/lab_python/Python_tutorial.ipynb
@@ -203,7 +203,7 @@
     }
    ],
    "source": [
-    "def quicksort(arr):\n",
+    "def quicksort(arr):\n", # NOTE_ DOes def mean define here?
     "    if len(arr) <= 1:\n",
     "        #print(arr)\n",
     "        return arr # return the array if the input is a single number.\n",
