--- a/lab_python/Python_tutorial.ipynb
+++ b/lab_python/Python_tutorial.ipynb
@@ -9,7 +9,8 @@
     "**Python Tutorial**\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)]()\n",
     "\n",
-    "Author: [Meng Lu](https://tomatofox.wordpress.com/)"
+    "Author: [Meng Lu](https://tomatofox.wordpress.com\n",
+    "TA: Romesch"
    ]
   },
   {
