--- a/lab_python/Python_tutorial.ipynb
+++ b/lab_python/Python_tutorial.ipynb
@@ -663,7 +663,7 @@
     "print(t and f) # Logical AND;\n",
     "print(t or f)  # Logical OR;\n",
     "print(not t)   # Logical NOT;\n",
-    "print(t != f)  # Logical XOR;"
+    "print(t != f)  # Logical XOR; (not equal)"
    ]
   },
   {
@@ -792,7 +792,7 @@
     "print(s.rjust(7))      # Right-justify a string, padding with spaces\n",
     "print(s.center(7))     # Center a string, padding with spaces\n",
     "print(s.replace('l', '(ell)'))  # Replace all instances of one substring with another\n",
-    "print('  world '.strip())  # Strip leading and trailing whitespace"
+    "print('  world '.strip())  # get rid of the leading and trailing whitespace"
    ]
   },
   {
@@ -873,7 +873,7 @@
     "id": "wzxX7rgWL9fn"
    },
    "source": [
-    "A list is the Python equivalent of an array, but is resizeable and can contain elements of different types:"
+    "A list is the Python equivalent of an array, but is resizable and can contain elements of different types:"
    ]
   },
   {
@@ -899,7 +899,7 @@
    "source": [
     "xs = [3, 1, 2 ,4, 5]   # Create a list\n",
     "print(xs, xs[2])\n",
-    "print(xs[-1])     # Negative indices count from the end of the list; prints \"2\"\n",
+    "print(xs[-1])     # Negative indices count from the end of the list; prints \"5\"\n",
     "\n"
    ]
   },
@@ -1046,7 +1046,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Exercise: create a list of all the even numbers larger than 10 and smaller than 20,\n",
+    "**Class exercise 0**: create a list of all the even numbers larger than 10 and smaller than 20,\n",
     "1) insert a number between 10 and 12,\n",
     "2) remove 12 in the list,\n",
     "3) add the a number to the end,\n",
@@ -1124,7 +1124,7 @@
    "metadata": {},
    "source": [
     "#### if, elif, and, else\n",
-    "if True, evaluates the code in the block that follows. It can be optionally followed by one or more elif and a catch-all else if all the conditinos are false:"
+    "if True, evaluates the code in the block that follows. It can be optionally followed by one or more elif and a catch-all else if all the conditions are false:"
    ]
   },
   {
@@ -1179,7 +1179,7 @@
     "x = 5\n",
     "\"5\" if x ==5 else \"not 5\"\n",
     "\n",
-    "#note: you may scarifice readability if the condition and true false expressions are complex. "
+    "#note: the codes may be less readable if the condition and true false expressions are complex. "
    ]
   },
   {
@@ -1366,7 +1366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### course exercies 1:\n",
+    "**Class exercies 1**:\n",
     "sum all numbers from 0 to 10,000 that are multiples of 3 or 5.\n",
     "hint: use range (10001); \"%\", \"==\". \"+=\", \"or\", \"if\", \"for\" \n"
    ]
@@ -1405,7 +1405,7 @@
    "metadata": {},
    "source": [
     "##### While loops\n",
-    "specifies a condition and a block of code that is to be executed until the condition evaluates to False or the loop is explicitely ened with break. \n"
+    "specifies a condition and a block of code that is to be executed until the condition evaluates to False or the loop is explicitly ended with break. \n"
    ]
   },
   {
@@ -1942,7 +1942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise**: write a function to calculate the factorial of a given list of non-negative integers.\n",
+    "**Class exercise 2**: write a function to calculate the factorial of a given list of non-negative integers.\n",
     "\n",
     "Factorial: the product of all positive integers less than or equal to a given positive integer and denoted by that integer and an exclamation point. Thus, factorial seven is written 7!, meaning 1 × 2 × 3 × 4 × 5 × 6 × 7. Factorial zero is defined as equal to 1."
    ]
@@ -2112,7 +2112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise 3**:\n",
+    "**Class exercise 3**:\n",
     "create a list of all the even numbers larger than 10 and smaller than 20,\n",
     "\n",
     "1. multiply all the even numbers by a factor of 1.5. \n",
@@ -2175,7 +2175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise 4** Add some methods to the class above, or write a class with methods. "
+    "**Class exercise 4** Add some methods to the class above, or write a class with methods. "
    ]
   },
   {
