slightly updated lab2
added a summary

--- a/lab_descriptive/Spatial data exploration .ipynb
+++ b/lab_descriptive/Spatial data exploration .ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Spatial Data Exploration**\n",
+    "\n",
+    "Author: Meng Lu\n",
+    "\n",
+    "Summary:\n",
+    "Displaying spatial data is essential to look at their distributions over geographical space. We also commonly want to explore their spatial correlation for prediction and point pattern analysis. This is what this tutorial covers:\n",
+    "\n",
+    "- How to display spatial data and put a basemap under the spatial elements.\n",
+    "- Moran's I statistics and visualisation for spatial dependency inspection. \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
