--- a/lab_descriptive/Descriptive statistics.ipynb
+++ b/lab_descriptive/Descriptive statistics.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "\n",
     "The degree of asymmetry observed in a probability distribution. There are three kinds of sknewness: positive, negative, and symmetric (skewness = 0).  \n",
     "You might already know that in linear regression we assume a symmetric/Normal distribution.\n",
-    "$$skewness = \\sum_{i =1}^n(x_i - mean(x))^3 / n*s^3$$\n",
+    "$$skewness = \\sum_{i =1}^n(x_i - \\bar{x})^3 / n*s^3$$\n",
     "\n",
     "Exercies: ranking the mode, median, and mean in the three kinds of skewness.\n",
     "\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,9 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.399999999999999 24.699999999999992\n",
+      "0.532823042367086 0.35054744185413295\n"
+     ]
+    }
+   ],
    "source": [
     "print(a.mean(), b.mean())\n",
     "print(a.std()/a.mean(), b.std()/b.mean())"
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +382,7 @@
        "[5 rows x 58 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +716,7 @@
        "[8 rows x 58 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +736,7 @@
        "1.0307676232992573"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +758,7 @@
        "array([[<AxesSubplot:title={'center':'wkd_day_value'}>]], dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -772,16 +781,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f9c0dbca670>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f804a79ca00>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -812,16 +821,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f9c0cf33be0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f804a98c9a0>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -849,16 +858,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f9c0a8763d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f804a95adf0>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -891,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -923,16 +932,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f9c06d473a0>"
+       "<seaborn.axisgrid.PairGrid at 0x7f804ad0f2b0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -969,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +990,7 @@
        "Name: urbantype_chara, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1017,7 @@
        "(482, 4)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1046,7 @@
        "array([2.69541157e+01, 3.04244124e+05, 6.24735970e+03, 7.95793927e+01])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1067,7 @@
        "array([1.29918838e+04, 1.46645668e+08, 3.01122737e+06, 3.83572673e+04])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1090,7 @@
        "62.159561"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1114,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
