--- a/lab_descriptive/Spatial data exploration .ipynb
+++ b/lab_descriptive/Spatial data exploration .ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,15 +39,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-e93ba7285939>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# load the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0map\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspreadurl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0map\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0map_road\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0map\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mregex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"road_class_2_50|wkd_day_value|urbantype_ch\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/envs/sa/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5463\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5464\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5465\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5466\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5467\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'list'"
+     ]
+    }
+   ],
    "source": [
     "#download data\n",
     "spreadurl = 'https://raw.githubusercontent.com/mengluchu/uncertainty/master/data_vis_exp/DENL17_uc.csv'\n",
     "# load the data\n",
     "ap = pd.read_csv(spreadurl)\n",
+    "\n",
     "ap_road = ap.filter (regex=\"road_class_2_50|wkd_day_value|urbantype_ch\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>X.1</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>wkd_day_value</th>\n",
+       "      <th>wnd_day_value</th>\n",
+       "      <th>wkd_night_value</th>\n",
+       "      <th>wnd_night_value</th>\n",
+       "      <th>radiation</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BuildingDistance</th>\n",
+       "      <th>KerbDistance</th>\n",
+       "      <th>rf10f_pre</th>\n",
+       "      <th>xgb10f_pre</th>\n",
+       "      <th>lasso10f_pre</th>\n",
+       "      <th>rf_all_pre</th>\n",
+       "      <th>xgb_all_pre</th>\n",
+       "      <th>lasso_all_pre</th>\n",
+       "      <th>urbantype</th>\n",
+       "      <th>urbantype_chara</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.749458</td>\n",
+       "      <td>51.295278</td>\n",
+       "      <td>15.486447</td>\n",
+       "      <td>11.526099</td>\n",
+       "      <td>16.807046</td>\n",
+       "      <td>15.587405</td>\n",
+       "      <td>2.960464</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>13.762989</td>\n",
+       "      <td>15.385385</td>\n",
+       "      <td>13.762989</td>\n",
+       "      <td>15.717666</td>\n",
+       "      <td>15.320059</td>\n",
+       "      <td>13.713334</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.916947</td>\n",
+       "      <td>51.635556</td>\n",
+       "      <td>14.697327</td>\n",
+       "      <td>10.694025</td>\n",
+       "      <td>16.898273</td>\n",
+       "      <td>15.578925</td>\n",
+       "      <td>2.998879</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>12.395461</td>\n",
+       "      <td>15.685171</td>\n",
+       "      <td>12.395461</td>\n",
+       "      <td>15.159920</td>\n",
+       "      <td>15.073839</td>\n",
+       "      <td>13.063114</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.121389</td>\n",
+       "      <td>51.978056</td>\n",
+       "      <td>28.577064</td>\n",
+       "      <td>23.264624</td>\n",
+       "      <td>30.600098</td>\n",
+       "      <td>29.184204</td>\n",
+       "      <td>3.003269</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>17.163067</td>\n",
+       "      <td>17.153606</td>\n",
+       "      <td>17.163067</td>\n",
+       "      <td>24.865255</td>\n",
+       "      <td>26.474834</td>\n",
+       "      <td>17.100374</td>\n",
+       "      <td>2</td>\n",
+       "      <td>suburban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.227778</td>\n",
+       "      <td>51.931944</td>\n",
+       "      <td>31.335268</td>\n",
+       "      <td>25.135034</td>\n",
+       "      <td>33.090708</td>\n",
+       "      <td>31.877024</td>\n",
+       "      <td>2.983356</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>24.283953</td>\n",
+       "      <td>25.739466</td>\n",
+       "      <td>24.283953</td>\n",
+       "      <td>28.784563</td>\n",
+       "      <td>30.210924</td>\n",
+       "      <td>24.698418</td>\n",
+       "      <td>3</td>\n",
+       "      <td>urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.289172</td>\n",
+       "      <td>52.078056</td>\n",
+       "      <td>23.677740</td>\n",
+       "      <td>19.901358</td>\n",
+       "      <td>26.016235</td>\n",
+       "      <td>26.668398</td>\n",
+       "      <td>2.988282</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>40.934195</td>\n",
+       "      <td>26.571985</td>\n",
+       "      <td>40.934195</td>\n",
+       "      <td>27.980614</td>\n",
+       "      <td>23.973755</td>\n",
+       "      <td>40.983389</td>\n",
+       "      <td>3</td>\n",
+       "      <td>urban</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 95 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  X.1  X  Longitude   Latitude  wkd_day_value  wnd_day_value  \\\n",
+       "0           1    1  1   3.749458  51.295278      15.486447      11.526099   \n",
+       "1           2    2  2   3.916947  51.635556      14.697327      10.694025   \n",
+       "2           3    3  3   4.121389  51.978056      28.577064      23.264624   \n",
+       "3           4    4  4   4.227778  51.931944      31.335268      25.135034   \n",
+       "4           5    5  5   4.289172  52.078056      23.677740      19.901358   \n",
+       "\n",
+       "   wkd_night_value  wnd_night_value  radiation  ...  BuildingDistance  \\\n",
+       "0        16.807046        15.587405   2.960464  ...              -999   \n",
+       "1        16.898273        15.578925   2.998879  ...              -999   \n",
+       "2        30.600098        29.184204   3.003269  ...              -999   \n",
+       "3        33.090708        31.877024   2.983356  ...              -999   \n",
+       "4        26.016235        26.668398   2.988282  ...              -999   \n",
+       "\n",
+       "   KerbDistance  rf10f_pre  xgb10f_pre  lasso10f_pre  rf_all_pre  xgb_all_pre  \\\n",
+       "0          -999  13.762989   15.385385     13.762989   15.717666    15.320059   \n",
+       "1          -999  12.395461   15.685171     12.395461   15.159920    15.073839   \n",
+       "2          -999  17.163067   17.153606     17.163067   24.865255    26.474834   \n",
+       "3          -999  24.283953   25.739466     24.283953   28.784563    30.210924   \n",
+       "4          -999  40.934195   26.571985     40.934195   27.980614    23.973755   \n",
+       "\n",
+       "   lasso_all_pre  urbantype  urbantype_chara  \n",
+       "0      13.713334          1            rural  \n",
+       "1      13.063114          1            rural  \n",
+       "2      17.100374          2         suburban  \n",
+       "3      24.698418          3            urban  \n",
+       "4      40.983389          3            urban  \n",
+       "\n",
+       "[5 rows x 95 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " "
    ]
   },
   {
