--- a/lab_descriptive/Descriptive statistics.ipynb
+++ b/lab_descriptive/Descriptive statistics.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,41 +47,46 @@
     "\n",
     "**Coefficient of variation** \n",
     "\n",
-    "The standard deviation is an absolute value of variability, e.g.  the variability will have a large value if the data values are large. It is therefore useful to think in terms of relative variability. \n",
+    "The standard deviation is an absolute value of variability, it is useful to think in terms of relative variability. \n",
     "\n",
     "$$coefficient\\ of\\ variation = sd / mean$$ \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.541359640617693 8.658521813797082\n"
+      "[111.  111.4 111.8 112.2 112.6 113.  113.4 113.8 114.2 114.6 115.  115.4\n",
+      " 115.8 116.2 116.6 117.  117.4 117.8 118.2 118.6 119.  119.4 119.8 120.2\n",
+      " 120.6 121.  121.4 121.8 122.2 122.6 123.  123.4 123.8 124.2 124.6 125.\n",
+      " 125.4 125.8 126.2 126.6 127.  127.4 127.8 128.2 128.6 129.  129.4 129.8]\n",
+      "5.541359640617693 5.541359640617774\n"
      ]
     }
    ],
    "source": [
     "a = np.arange (1, 20, 0.4)\n",
-    "b = np.arange (10, 39.5, 0.6)\n",
-    "print(a.std(),b.std()) # does it mean b varies more form its mean than a does from its mean? "
+    "b = np.arange (111, 130, 0.4)\n",
+    "print(b)\n",
+    "print(a.std(),b.std())  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.399999999999999 24.699999999999992\n",
-      "0.532823042367086 0.35054744185413295\n"
+      "10.399999999999999 120.40000000000013\n",
+      "0.532823042367086 0.04602458173270571\n"
      ]
     }
    ],
@@ -118,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +387,7 @@
        "[5 rows x 58 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
