--- a/lab_python/Assignment_1.ipynb
+++ b/lab_python/Assignment_1.ipynb
@@ -224,7 +224,7 @@
    },
    "source": [
     "## **Exercise 8** \n",
-    "Set up a subplot grid that has height 3 and width 2, plot sin(i), i = 1,..., 6 in each subplot, using for loop. \n",
+    "Set up a subplot grid that has height 3 and width 2, plot sin(x*i), i = 1,..., 6 in each subplot, using for loop. \n",
     " \n"
    ]
   }
