--- a/efficient_python.ipynb
+++ b/efficient_python.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "88d8528e",
    "metadata": {},
    "outputs": [
@@ -33,27 +33,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting memory_profiler\n",
-      "  Downloading memory_profiler-0.59.0.tar.gz (38 kB)\n",
-      "Requirement already satisfied: psutil in /opt/anaconda3/lib/python3.8/site-packages (from memory_profiler) (5.8.0)\n",
-      "Building wheels for collected packages: memory-profiler\n",
-      "  Building wheel for memory-profiler (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for memory-profiler: filename=memory_profiler-0.59.0-py3-none-any.whl size=31307 sha256=63a1e820c98aa05489156a201d5e28450093079f283beffbae40de2938b2052f\n",
-      "  Stored in directory: /Users/meng/Library/Caches/pip/wheels/5d/66/23/1e7f1719b959ee9093d5025dbdcbe4c43a548ca510997f318f\n",
-      "Successfully built memory-profiler\n",
-      "Installing collected packages: memory-profiler\n",
-      "Successfully installed memory-profiler-0.59.0\n"
+      "Requirement already satisfied: memory_profiler in /opt/anaconda3/lib/python3.8/site-packages (0.59.0)\r\n",
+      "Requirement already satisfied: psutil in /opt/anaconda3/lib/python3.8/site-packages (from memory_profiler) (5.8.0)\r\n"
      ]
     }
    ],
    "source": [
-    "#! pip install memory_profiler\n",
-    "#%load_ext memory_profiler"
+    "! pip install memory_profiler\n",
+    "%load_ext memory_profiler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "1d48f747",
    "metadata": {},
    "outputs": [
@@ -61,17 +53,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "318 ns ± 5.61 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "322 ns ± 4.47 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit x = map(lambda x: x**2, range(1,10))"
+    "%%timeit \n",
+    "\n",
+    "x = map(lambda x: x**2, range(1,10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "c5e77713",
    "metadata": {},
    "outputs": [
@@ -79,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 89.45 MiB, increment: 0.20 MiB\n"
+      "peak memory: 80.86 MiB, increment: 0.32 MiB\n"
      ]
     }
    ],
@@ -108,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "b4b5bc35",
    "metadata": {},
    "outputs": [],
@@ -143,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "47487cd0",
    "metadata": {},
    "outputs": [
@@ -151,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "68.3 ms ± 2.57 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "64.4 ms ± 2.13 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -161,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "cefe55ca",
    "metadata": {},
    "outputs": [
@@ -169,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77 µs ± 1.48 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "75.4 µs ± 1.37 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -179,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "7d1f04f4",
    "metadata": {},
    "outputs": [
@@ -192,8 +186,8 @@
     }
    ],
    "source": [
-    "%%prun -s cumulative -l 6 \n",
-    "ap_road.apply(b, axis = 1) # -s cumulative means to sort by cumulative time, -l 10 means to sort the first ten "
+    "%%prun -s cumulative -l 5 \n",
+    "ap_road.apply(lambda x: x+1, axis=1) # -s cumulative means to sort by cumulative time, -l 10 means to sort the first ten "
    ]
   },
   {
@@ -220,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "id": "3769a153",
    "metadata": {},
    "outputs": [
@@ -228,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.87 µs ± 29.9 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "1.85 µs ± 44.7 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -246,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "id": "80ad91d5",
    "metadata": {},
    "outputs": [
@@ -254,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.77 µs ± 12.3 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "1.74 µs ± 46.1 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -271,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "id": "fd414597",
    "metadata": {},
    "outputs": [
@@ -279,7 +273,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.74 µs ± 70.8 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "1.6 µs ± 7.76 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -293,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "id": "55571d9b",
    "metadata": {},
    "outputs": [],
@@ -312,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "id": "e9c83789",
    "metadata": {},
    "outputs": [
@@ -320,7 +314,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29.3 µs ± 760 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "2.65 ms ± 42.9 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -328,13 +322,14 @@
     "%%timeit\n",
     "outerproduct = np.zeros([100])\n",
     "for i in range(len(a)): \n",
+    "    for j in range(len(a)):\n",
     "        outerproduct[j]= a[i]*b[i]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "id": "87fa16df",
    "metadata": {},
    "outputs": [
@@ -342,7 +337,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "419 ns ± 7.69 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "405 ns ± 5.78 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -360,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "a7d2f4d0",
    "metadata": {},
    "outputs": [
@@ -368,7 +363,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.36 ms ± 165 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "3.34 ms ± 166 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -386,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "232b305f",
    "metadata": {},
    "outputs": [
@@ -394,7 +389,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "131 µs ± 1.78 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "123 µs ± 1.01 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -404,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "id": "6ef06a23",
    "metadata": {},
    "outputs": [
