--- a/lab_1_python/install_packages.ipynb
+++ b/lab_1_python/install_packages.ipynb
@@ -109,7 +109,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -123,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
