--- a/lab_2_descriptive/Descriptive statistics.ipynb
+++ b/lab_2_descriptive/Descriptive statistics.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,14 +123,390 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>X.2</th>\n",
+       "      <th>X.1</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>wkd_day_value</th>\n",
+       "      <th>wnd_day_value</th>\n",
+       "      <th>wkd_night_value</th>\n",
+       "      <th>wnd_night_value</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BuildingDistance</th>\n",
+       "      <th>KerbDistance</th>\n",
+       "      <th>rf10f_pre</th>\n",
+       "      <th>xgb10f_pre</th>\n",
+       "      <th>lasso10f_pre</th>\n",
+       "      <th>rf_all_pre</th>\n",
+       "      <th>xgb_all_pre</th>\n",
+       "      <th>lasso_all_pre</th>\n",
+       "      <th>urbantype</th>\n",
+       "      <th>urbantype_chara</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.749458</td>\n",
+       "      <td>51.295278</td>\n",
+       "      <td>15.486447</td>\n",
+       "      <td>11.526099</td>\n",
+       "      <td>16.807046</td>\n",
+       "      <td>15.587405</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>13.762989</td>\n",
+       "      <td>15.385385</td>\n",
+       "      <td>13.762989</td>\n",
+       "      <td>15.717666</td>\n",
+       "      <td>15.320059</td>\n",
+       "      <td>13.713334</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.916947</td>\n",
+       "      <td>51.635556</td>\n",
+       "      <td>14.697327</td>\n",
+       "      <td>10.694025</td>\n",
+       "      <td>16.898273</td>\n",
+       "      <td>15.578925</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>12.395461</td>\n",
+       "      <td>15.685171</td>\n",
+       "      <td>12.395461</td>\n",
+       "      <td>15.159920</td>\n",
+       "      <td>15.073839</td>\n",
+       "      <td>13.063114</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.121389</td>\n",
+       "      <td>51.978056</td>\n",
+       "      <td>28.577064</td>\n",
+       "      <td>23.264624</td>\n",
+       "      <td>30.600098</td>\n",
+       "      <td>29.184204</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>17.163067</td>\n",
+       "      <td>17.153606</td>\n",
+       "      <td>17.163067</td>\n",
+       "      <td>24.865255</td>\n",
+       "      <td>26.474834</td>\n",
+       "      <td>17.100374</td>\n",
+       "      <td>2</td>\n",
+       "      <td>suburban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.227778</td>\n",
+       "      <td>51.931944</td>\n",
+       "      <td>31.335268</td>\n",
+       "      <td>25.135034</td>\n",
+       "      <td>33.090708</td>\n",
+       "      <td>31.877024</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>24.283953</td>\n",
+       "      <td>25.739466</td>\n",
+       "      <td>24.283953</td>\n",
+       "      <td>28.784563</td>\n",
+       "      <td>30.210924</td>\n",
+       "      <td>24.698418</td>\n",
+       "      <td>3</td>\n",
+       "      <td>urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.289172</td>\n",
+       "      <td>52.078056</td>\n",
+       "      <td>23.677740</td>\n",
+       "      <td>19.901358</td>\n",
+       "      <td>26.016235</td>\n",
+       "      <td>26.668398</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>40.934195</td>\n",
+       "      <td>26.571985</td>\n",
+       "      <td>40.934195</td>\n",
+       "      <td>27.980614</td>\n",
+       "      <td>23.973755</td>\n",
+       "      <td>40.983389</td>\n",
+       "      <td>3</td>\n",
+       "      <td>urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>478</td>\n",
+       "      <td>478</td>\n",
+       "      <td>478</td>\n",
+       "      <td>478</td>\n",
+       "      <td>14.538595</td>\n",
+       "      <td>52.337336</td>\n",
+       "      <td>40.558101</td>\n",
+       "      <td>28.342789</td>\n",
+       "      <td>27.073447</td>\n",
+       "      <td>18.920012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30.953139</td>\n",
+       "      <td>26.780867</td>\n",
+       "      <td>30.953139</td>\n",
+       "      <td>30.733627</td>\n",
+       "      <td>32.618584</td>\n",
+       "      <td>31.031127</td>\n",
+       "      <td>3</td>\n",
+       "      <td>urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>479</td>\n",
+       "      <td>479</td>\n",
+       "      <td>479</td>\n",
+       "      <td>479</td>\n",
+       "      <td>14.638166</td>\n",
+       "      <td>52.146264</td>\n",
+       "      <td>10.018208</td>\n",
+       "      <td>6.956605</td>\n",
+       "      <td>9.613709</td>\n",
+       "      <td>7.824012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>16.652033</td>\n",
+       "      <td>12.822893</td>\n",
+       "      <td>16.652033</td>\n",
+       "      <td>11.593898</td>\n",
+       "      <td>9.480033</td>\n",
+       "      <td>16.501599</td>\n",
+       "      <td>2</td>\n",
+       "      <td>suburban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>479</th>\n",
+       "      <td>480</td>\n",
+       "      <td>480</td>\n",
+       "      <td>480</td>\n",
+       "      <td>480</td>\n",
+       "      <td>14.749731</td>\n",
+       "      <td>51.285356</td>\n",
+       "      <td>8.343354</td>\n",
+       "      <td>6.513214</td>\n",
+       "      <td>9.194260</td>\n",
+       "      <td>8.582807</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>11.426605</td>\n",
+       "      <td>8.863793</td>\n",
+       "      <td>11.426605</td>\n",
+       "      <td>8.346047</td>\n",
+       "      <td>8.239283</td>\n",
+       "      <td>11.109623</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>480</th>\n",
+       "      <td>481</td>\n",
+       "      <td>481</td>\n",
+       "      <td>481</td>\n",
+       "      <td>481</td>\n",
+       "      <td>14.822846</td>\n",
+       "      <td>50.892377</td>\n",
+       "      <td>13.542693</td>\n",
+       "      <td>9.770034</td>\n",
+       "      <td>13.043437</td>\n",
+       "      <td>11.282229</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>16.553348</td>\n",
+       "      <td>14.038402</td>\n",
+       "      <td>16.553348</td>\n",
+       "      <td>13.293517</td>\n",
+       "      <td>12.507479</td>\n",
+       "      <td>16.219546</td>\n",
+       "      <td>2</td>\n",
+       "      <td>suburban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>481</th>\n",
+       "      <td>482</td>\n",
+       "      <td>482</td>\n",
+       "      <td>482</td>\n",
+       "      <td>482</td>\n",
+       "      <td>14.973958</td>\n",
+       "      <td>51.155801</td>\n",
+       "      <td>27.561284</td>\n",
+       "      <td>19.764658</td>\n",
+       "      <td>18.544711</td>\n",
+       "      <td>14.399079</td>\n",
+       "      <td>...</td>\n",
+       "      <td>65</td>\n",
+       "      <td>8</td>\n",
+       "      <td>20.539399</td>\n",
+       "      <td>16.620758</td>\n",
+       "      <td>20.539399</td>\n",
+       "      <td>21.300474</td>\n",
+       "      <td>21.273851</td>\n",
+       "      <td>20.471427</td>\n",
+       "      <td>3</td>\n",
+       "      <td>urban</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>482 rows × 96 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0  X.2  X.1    X  Longitude   Latitude  wkd_day_value  \\\n",
+       "0             1    1    1    1   3.749458  51.295278      15.486447   \n",
+       "1             2    2    2    2   3.916947  51.635556      14.697327   \n",
+       "2             3    3    3    3   4.121389  51.978056      28.577064   \n",
+       "3             4    4    4    4   4.227778  51.931944      31.335268   \n",
+       "4             5    5    5    5   4.289172  52.078056      23.677740   \n",
+       "..          ...  ...  ...  ...        ...        ...            ...   \n",
+       "477         478  478  478  478  14.538595  52.337336      40.558101   \n",
+       "478         479  479  479  479  14.638166  52.146264      10.018208   \n",
+       "479         480  480  480  480  14.749731  51.285356       8.343354   \n",
+       "480         481  481  481  481  14.822846  50.892377      13.542693   \n",
+       "481         482  482  482  482  14.973958  51.155801      27.561284   \n",
+       "\n",
+       "     wnd_day_value  wkd_night_value  wnd_night_value  ...  BuildingDistance  \\\n",
+       "0        11.526099        16.807046        15.587405  ...              -999   \n",
+       "1        10.694025        16.898273        15.578925  ...              -999   \n",
+       "2        23.264624        30.600098        29.184204  ...              -999   \n",
+       "3        25.135034        33.090708        31.877024  ...              -999   \n",
+       "4        19.901358        26.016235        26.668398  ...              -999   \n",
+       "..             ...              ...              ...  ...               ...   \n",
+       "477      28.342789        27.073447        18.920012  ...                 1   \n",
+       "478       6.956605         9.613709         7.824012  ...              -999   \n",
+       "479       6.513214         9.194260         8.582807  ...              -999   \n",
+       "480       9.770034        13.043437        11.282229  ...              -999   \n",
+       "481      19.764658        18.544711        14.399079  ...                65   \n",
+       "\n",
+       "     KerbDistance  rf10f_pre  xgb10f_pre  lasso10f_pre  rf_all_pre  \\\n",
+       "0            -999  13.762989   15.385385     13.762989   15.717666   \n",
+       "1            -999  12.395461   15.685171     12.395461   15.159920   \n",
+       "2            -999  17.163067   17.153606     17.163067   24.865255   \n",
+       "3            -999  24.283953   25.739466     24.283953   28.784563   \n",
+       "4            -999  40.934195   26.571985     40.934195   27.980614   \n",
+       "..            ...        ...         ...           ...         ...   \n",
+       "477             3  30.953139   26.780867     30.953139   30.733627   \n",
+       "478          -999  16.652033   12.822893     16.652033   11.593898   \n",
+       "479          -999  11.426605    8.863793     11.426605    8.346047   \n",
+       "480          -999  16.553348   14.038402     16.553348   13.293517   \n",
+       "481             8  20.539399   16.620758     20.539399   21.300474   \n",
+       "\n",
+       "     xgb_all_pre  lasso_all_pre  urbantype  urbantype_chara  \n",
+       "0      15.320059      13.713334          1            rural  \n",
+       "1      15.073839      13.063114          1            rural  \n",
+       "2      26.474834      17.100374          2         suburban  \n",
+       "3      30.210924      24.698418          3            urban  \n",
+       "4      23.973755      40.983389          3            urban  \n",
+       "..           ...            ...        ...              ...  \n",
+       "477    32.618584      31.031127          3            urban  \n",
+       "478     9.480033      16.501599          2         suburban  \n",
+       "479     8.239283      11.109623          1            rural  \n",
+       "480    12.507479      16.219546          2         suburban  \n",
+       "481    21.273851      20.471427          3            urban  \n",
+       "\n",
+       "[482 rows x 96 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#download data\n",
     "spreadurl = 'https://raw.githubusercontent.com/mengluchu/uncertainty/master/data_vis_exp/DENL17_uc.csv'\n",
     "# load the data\n",
-    "ap = pd.read_csv(spreadurl)\n"
+    "ap = pd.read_csv(spreadurl)\n",
+    "ap"
    ]
   },
   {
@@ -142,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +763,7 @@
        "[5 rows x 58 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +1097,7 @@
        "[8 rows x 58 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +1117,7 @@
        "1.0307676232992573"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +1139,7 @@
        "array([[<AxesSubplot:title={'center':'wkd_day_value'}>]], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
